objects/OUV_Budget__c.object
<CustomObject>
    <label>OUV Budget/Forecast Detail</label>
    <nameField>
        <displayFormat>Budget-{00000}</displayFormat>
        <label>OUV Budget ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OUV Budget/Forecast Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>OUV_May__c</fullName>
        <label>May</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_July__c</fullName>
        <label>July</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_June__c</fullName>
        <label>June</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_Year__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>OUV_FiscalYear</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_April__c</fullName>
        <label>April</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>OUV_Brand</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_March__c</fullName>
        <label>March</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_August__c</fullName>
        <label>August</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>MENA</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Portugal</fullName>
                </value>
                <value>
                    <fullName>Russia</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
                <value>
                    <fullName>South Korea</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>Taiwan</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_January__c</fullName>
        <label>January</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_October__c</fullName>
        <label>October</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_December__c</fullName>
        <label>December</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_February__c</fullName>
        <label>February</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_November__c</fullName>
        <label>November</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_Nameplate__c</fullName>
        <description>Dependent on Brand</description>
        <inlineHelpText>Include both Model Code and Model Description, e.g. X760 XE</inlineHelpText>
        <label>Vehicle Line</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>OUV_Brand__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>OUV_VehicleLine</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_September__c</fullName>
        <label>September</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_Budget_Name__c</fullName>
        <formula>TEXT( OUV_Year__c ) &amp; &quot; &quot; &amp;  TEXT( OUV_Market__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_MayForecast__c</fullName>
        <label>May Forecast</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_JulyForecast__c</fullName>
        <label>July Forecast</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_JuneForecast__c</fullName>
        <label>June Forecast</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_AprilForecast__c</fullName>
        <label>April Forecast</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_MarchForecast__c</fullName>
        <label>March Forecast</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_AugustForecast__c</fullName>
        <label>August Forecast</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_JanuaryForecast__c</fullName>
        <label>January Forecast</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_OctoberForecast__c</fullName>
        <label>October Forecast</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_DecemberForecast__c</fullName>
        <label>December Forecast</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_FebruaryForecast__c</fullName>
        <label>February Forecast</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_Inventory_Status__c</fullName>
        <formula>CASE( OUV_Level_2_Category__c , &quot;Terms of Employment&quot;, &quot;C&quot;, &quot;Job Related&quot;, &quot;C&quot;,&quot;Press/PR&quot;,&quot;C&quot;,&quot;Corporate Social Responsibility (CSR)&quot;,&quot;C&quot;,&quot;VIP Loans&quot;,&quot;C&quot;,&quot;Launch/Events&quot;,&quot;C&quot;,&quot;Training&quot;,&quot;C&quot;,&quot;JLR Experience&quot;,&quot;C&quot;,&quot;Sponsorship&quot;,&quot;C&quot;,&quot;Marketing Asset Production&quot;,&quot;C&quot;,&quot;Product Placement&quot;,&quot;C&quot;,&quot;Demonstrators&quot;,&quot;C&quot;,&quot;Homologation Cars&quot;,&quot;C&quot;,&quot;Customer Service -Diagnostics/Methods/Product Investigation/Training&quot;,&quot;C&quot;,&quot;Customer Service - Loan Vehicles&quot;,&quot;C&quot;,&quot;Product Development Vehicles&quot;,&quot;C&quot;,&quot;Manufacturing/Support Functions Vehicles&quot;,&quot;C&quot;,&quot;Pool Cars&quot;,&quot;C&quot;,&quot;All Other&quot;,&quot;C&quot;,&quot;Cars awaiting sale / rework / disposal&quot;,&quot;U&quot;,&quot;Fleet Buybacks awaiting rework/resale&quot;,&quot;U&quot;,&quot;Employee vehicle returns/MRC Buybacks awaiting rework/resale&quot;,&quot;U&quot;,&quot;Classic Donor vehicles&quot;,&quot;U&quot;,&quot;Customer Buybacks&quot;,&quot;U&quot;,&quot;Fleet Buybacks&quot;,&quot;B&quot;,&quot;Written Down/Provisioned Units (£1 vehicles)&quot;,&quot;A&quot;,&quot;Heritage/Museum Vehicles&quot;,&quot;A&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inventory Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Level_1_Category__c</fullName>
        <label>OUV Reporting Category 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>OUV_ReportingCategory1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Level_2_Category__c</fullName>
        <description>Dependent on Level 1 Category</description>
        <label>OUV Reporting Category 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>OUV_Level_1_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>OUV_ReportingCategory2</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Level_3_Category__c</fullName>
        <description>Dependent on Level 2 Category</description>
        <label>OUV Reporting Category 3</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>OUV_Level_2_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>OUV_Reporting_Category_3</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_NovemberForecast__c</fullName>
        <label>November Forecast</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_SeptemberForecast__c</fullName>
        <label>September Forecast</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_AnnualMarketSummary__c</fullName>
        <description>This is master detail relationship with AnnualMarketSummary Object. This is for rollup summary on AnnualMarketSummary by Brand and OUV Category Level.</description>
        <label>Annual Market Summary</label>
        <referenceTo>OUV_AnnualMarketSummary__c</referenceTo>
        <relationshipName>OUV_Budgets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OUV_Main_Reporting_Level__c</fullName>
        <formula>CASE(OUV_Level_2_Category__c, &quot;Terms of Employment&quot;, &quot;Unactionable&quot;, &quot;Job Related&quot;, &quot;Unactionable&quot;,&quot;Press/PR&quot;,&quot;Active&quot;,&quot;Corporate Social Responsibility (CSR)&quot;,&quot;Active&quot;,&quot;VIP Loans&quot;,CASE(OUV_Level_3_Category__c,&quot;Royal Household (RHH)&quot;,&quot;Active&quot;,&quot;VIP - Individual (Free of Charge)&quot;,&quot;Active&quot;,&quot;VIP - Individual (Charged)&quot;,&quot;Unactionable&quot;,&quot;VIP - Corporate&quot;,&quot;Active&quot;,&quot;&quot;),&quot;Launch/Events&quot;,&quot;Active&quot;,&quot;Training&quot;,&quot;Active&quot;,&quot;JLR Experience&quot;,&quot;Active&quot;,&quot;Sponsorship&quot;,&quot;Active&quot;,&quot;Marketing Asset Production&quot;,&quot;Active&quot;,&quot;Product Placement&quot;,&quot;Active&quot;,&quot;Demonstrators&quot;,&quot;Active&quot;,&quot;Homologation Cars&quot;,&quot;Active&quot;,&quot;Customer Service -Diagnostics/Methods/Product Investigation/Training&quot;,&quot;Active&quot;,&quot;Customer Service - Loan Vehicles&quot;,&quot;Active&quot;,&quot;Product Development Vehicles&quot;,&quot;Active&quot;,&quot;Manufacturing/Support Functions Vehicles&quot;,&quot;Active&quot;,&quot;Pool Cars&quot;,&quot;Active&quot;,&quot;All Other&quot;,&quot;Active&quot;,&quot;Cars awaiting sale / rework / disposal&quot;,&quot;Inactive&quot;,&quot;Fleet Buybacks awaiting rework/resale&quot;,&quot;Inactive&quot;,&quot;Employee vehicle returns/MRC Buybacks awaiting rework/resale&quot;,&quot;Inactive&quot;,&quot;Classic Donor vehicles&quot;,&quot;Inactive&quot;,&quot;Customer Buybacks&quot;,&quot;Inactive&quot;,&quot;Fleet Buybacks&quot;,&quot;Unactionable&quot;,&quot;Written Down/Provisioned Units (£1 vehicles)&quot;,&quot;Unactionable&quot;,&quot;Heritage/Museum Vehicles&quot;,&quot;Unactionable&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OUV Reporting Category</label>
        <type>Text</type>
    </fields>
    <validationRules>
        <fullName>OUV_Budget_Edit_Access</fullName>
        <active>true</active>
        <errorConditionFormula>if( (ISPICKVAL(OUV_AnnualMarketSummary__r.OUV_StatusType__c,&apos;Active&apos;)|| ISPICKVAL(OUV_AnnualMarketSummary__r.OUV_StatusType__c,&apos;Approved&apos;)) &amp;&amp;  $Profile.Name &lt;&gt; &apos;System Administrator&apos;, true, false )</errorConditionFormula>
        <errorMessage>Budget has been Approved, no changes can be made.</errorMessage>
    </validationRules>
</CustomObject>